--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
 body {
   background-color: #111;
-  color: #ddd;
+  color: #eee;
   margin: 5%;
   font-family: Inconsolata;
 }
 
-.container {
+#container {
   width: 90%;
   padding: 5%;
   background-color: #190061;
   box-shadow: 0px 0px 30px #005;
   border-radius: 3px;
+  color: #eee;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #addStreamer {
